--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@uiw/react-codemirror": "^4.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.25.1",
     "react-scroll": "^1.9.0"
   },
